# substr-Vergil645

./: .gitignore  CMakeLists.txt  README.md  build.sh  hask-hello-world.cabal  solution.cpp
.github/workflows/: cpp.yml
app/: Main.hs
src/: Lib.hs
